# marketplace

./: .coverage  .gitignore  README.md  flake8  main.py  pyproject.toml
marketplace/: category.py  order.py  product.py  reader_json.py  zerro_error.py
tests/: test_category.py  test_order.py  test_product.py  test_reader_json.py  test_zerro_error.py
